logs/etl.log
2026-04-01 15:01:21,878 | INFO | Starting ETL...
2026-04-01 15:01:29,824 | INFO | client_meters: 25000 rows processed
2026-04-01 15:01:37,610 | INFO | client_meters: 50000 rows processed
2026-04-01 15:01:45,160 | INFO | client_meters: 75000 rows processed
2026-04-01 15:01:52,638 | INFO | client_meters: 100000 rows processed
2026-04-01 15:01:59,921 | INFO | client_meters: 125000 rows processed
2026-04-01 15:02:07,038 | INFO | client_meters: 150000 rows processed
2026-04-01 15:02:13,700 | INFO | client_meters: 175000 rows processed
2026-04-01 15:02:21,703 | INFO | client_meters: 200000 rows processed
2026-04-01 15:02:30,784 | INFO | client_meters: 225000 rows processed
2026-04-01 15:02:39,377 | INFO | client_meters: 250000 rows processed
2026-04-01 15:02:46,735 | INFO | client_meters: 275000 rows processed
2026-04-01 15:03:02,496 | INFO | client_meters: 300000 rows processed
2026-04-01 15:03:13,442 | INFO | client_meters: 325000 rows processed
2026-04-01 15:03:22,937 | INFO | client_meters: 350000 rows processed
2026-04-01 15:03:31,324 | INFO | client_meters: 375000 rows processed
2026-04-01 15:03:39,618 | INFO | client_meters: 400000 rows processed
2026-04-01 15:03:48,357 | INFO | client_meters: 425000 rows processed
2026-04-01 15:03:57,182 | INFO | client_meters: 450000 rows processed
2026-04-01 15:04:05,590 | INFO | client_meters: 475000 rows processed
2026-04-01 15:04:14,374 | INFO | client_meters: 500000 rows processed
2026-04-01 15:04:22,820 | INFO | client_meters: 525000 rows processed
2026-04-01 15:04:31,022 | INFO | client_meters: 550000 rows processed
2026-04-01 15:04:34,982 | INFO | client_meters: 557916 rows processed
2026-04-01 15:04:36,457 | INFO | Finished client_meters
2026-04-01 15:04:36,458 | INFO | ETL COMPLETED SUCCESSFULLY
2026-04-01 15:11:58,938 | INFO | Starting ETL...
2026-04-01 15:12:05,672 | ERROR | ETL FAILED
Traceback (most recent call last):
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 113, in <module>
    insert_pg(converted, pg_table)
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 90, in insert_pg
    execute_values(pg_cursor, query, values)
  File "C:\Users\User\Desktop\eazi_etl\venv\Lib\site-packages\psycopg2\extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "118_id"
LINE 2: ...ss_line4, num_sites, lead_proof, search_postcode, 118_id, co...
                                                             ^

2026-04-01 15:13:03,056 | INFO | Starting ETL...
2026-04-01 15:13:03,477 | INFO | company: 263 rows processed
2026-04-01 15:13:03,597 | INFO | Finished company
2026-04-01 15:13:03,598 | INFO | ETL COMPLETED SUCCESSFULLY
2026-04-01 16:01:03,602 | INFO | Starting ETL...
2026-04-01 16:01:10,429 | ERROR | ETL FAILED
Traceback (most recent call last):
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 113, in <module>
    insert_pg(converted, pg_table)
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 90, in insert_pg
    execute_values(pg_cursor, query, values)
  File "C:\Users\User\Desktop\eazi_etl\venv\Lib\site-packages\psycopg2\extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "118_id"
LINE 2: ...ss_line4, num_sites, lead_proof, search_postcode, 118_id, co...
                                                             ^

2026-04-01 16:16:21,840 | INFO | Starting ETL...
2026-04-01 16:16:28,234 | ERROR | ETL FAILED
Traceback (most recent call last):
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 113, in <module>
    insert_pg(converted, pg_table)
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 90, in insert_pg
    execute_values(pg_cursor, query, values)
  File "C:\Users\User\Desktop\eazi_etl\venv\Lib\site-packages\psycopg2\extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "118_id"
LINE 2: ...ss_line4, num_sites, lead_proof, search_postcode, 118_id, co...
                                                             ^

2026-04-01 16:16:42,112 | INFO | Starting ETL...
2026-04-01 16:16:48,769 | ERROR | ETL FAILED
Traceback (most recent call last):
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 113, in <module>
    insert_pg(converted, pg_table)
  File "C:\Users\User\Desktop\eazi_etl\etl.py", line 90, in insert_pg
    execute_values(pg_cursor, query, values)
  File "C:\Users\User\Desktop\eazi_etl\venv\Lib\site-packages\psycopg2\extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "118_id"
LINE 2: ...ss_line4, num_sites, lead_proof, search_postcode, 118_id, co...
                                                             ^

